--- a/Final_report.Rmd
+++ b/Final_report.Rmd
@@ -29,11 +29,11 @@ knitr::opts_chunk$set(echo = FALSE,
   library(glue)
   library(ggfortify)
   library(gtools)
-
+  
 }
-  
-  
-  select <- dplyr::select
+
+
+select <- dplyr::select
 
 
 theme_set(theme_bw() +
@@ -50,11 +50,7 @@ theme_set(theme_bw() +
 
 # Abstract
 
-One character of a functioning society is not just the total wealth, but the social mobility in the society. A lack of social mobility might cause false consciousness of what is called a "Glass Ceiling" - a so called invisible barrier that prevents a given demographic from rising beyond a certain level in a hierarchy. Invisible or visible barriers might cause different subgroups of the population feel frustrated and may prevent them from making a progress or working hard for their future and for their families future.
-
-In order to suggest a possible solution I analyzed the data from a 2018 survey by the Central Bureau of Statistics. First I built different prediction models in order to see if I can predict high socioeconomic status in the future (age 45- 54) based on the past (age 30). Afterwards I tried to find special groups based only on socioeconomic variables on the present. Last I tried to explore the distributions of the socioeconomic scores among different subgroups in order to add some inference and possible insights to my analysis. 
-
-I found out that I can predict pretty well future socioeconomic status based on variables from the past, and that the most powerful predictor was having a military / national service. Using unsupervised learning I found 3 main subgroups based on the socioeconomic variables: Those who have high socioeconomic status in all aspects, those who tend to have no formal high education and a low income but claim to be satisfied with their lives and those  who are not satisfied with their lives but economically and in terms of education are somewhere between the other two clusters.
+A lack of social mobility might cause false consciousness of what is called a "Glass Ceiling" - a so called invisible barrier that prevents a given demographic from rising beyond a certain level in a hierarchy. Invisible or visible barriers might cause different subgroups of the population feel frustrated and may prevent them from making a progress or working hard for their future and for their families future. In order to suggest a possible solution I analyzed the data from a 2018 survey by the Central Bureau of Statistics. First I built different prediction models in order to see if I can predict high socioeconomic status in the future (age 45- 54) based on the past (age 30). Afterwards I tried to find special groups based only on socioeconomic variables on the present. Last I tried to explore the distributions of the socioeconomic scores among different subgroups in order to add some inference and possible insights to my analysis. I found out that I can predict pretty well future socioeconomic status based on variables from the past, and that the most powerful predictor was having a military / national service. Using unsupervised learning I found 3 main subgroups based on the socioeconomic variables: Those who have high socioeconomic status in all aspects, those who tend to have no formal high education and a low income but claim to be satisfied with their lives and those  who are not satisfied with their lives but economically and in terms of education are somewhere between the other two clusters.
 
 
 
@@ -65,7 +61,7 @@ This project deals with the issue of social mobility in Israel. Social mobility 
 I find this issue very interesting because I can understand what is needed from someone in order to improve and change his social status. In this project I would like to find answers to the following questions:
 
 -   Can we predict future social status by the background of the participant and his parents?
--   Can we characterize similar groups by features of socioeconomic status?
+-   Can we characterize similar groups by variables of socioeconomic status?
 -   Can we identify variables that influence social mobility?
 
 During the whole project I used a socioeconomic score that I created by myself as described in the following section.
@@ -137,15 +133,11 @@ There are many ways to measure and define socioeconomic status. I built a score 
 
 - `MerutzeEzor` - How much does the participant is satisfied with his living area? 1-4.
 
-- `MatzavBriut` - How much does the participant values is health condition generally? 1-4.
-
-- `MatzavBriut` - How much does the participant values is health condition generally? 1-4.
+- `MatzavBriut` - How much does the participant is satisfied with his health condition? 1-4.
 
 - `TeudaGvoha` - Participant's education: The same levels as mentioned in the Mother Education variable.
 
 - `PehamimShimushInt` - Frequency of internet use per week: Not at all, less than once a week, once or twice a week, everyday or almost everyday.
-
-- `MerutzeKesherMishp` - How much are you satisfied with your family relationship? 1-5.
 
 - `MerutzeKesherMishp` - How much are you satisfied with your family relationship? 1-5.
 
@@ -155,7 +147,7 @@ There are many ways to measure and define socioeconomic status. I built a score 
 
 - `MerutzeKalkali` - How much are you satisfied with your economic status? 1-4.
 
-- `HachnasaAvodaNeto` - Last week what was your income (Neto) from all of your workplaces? 0-2000, 2001-3000, 3001-4000, 4001-5000, 5001-6000, 6001-7500, 7501-10000, 10001-14000, 14001, 21000, above 21000.
+- `HachnasaAvodaNeto` - Last month what was your income (Neto) from all of your workplaces? 0-2000, 2001-3000, 3001-4000, 4001-5000, 5001-6000, 6001-7500, 7501-10000, 10001-14000, 14001, 21000, above 21000.
 
 - `Mispar_dirot` - How many apartments do you own? 0, 1, 2+.
 
@@ -165,10 +157,6 @@ Some of the variables indicate high socioeconomic status in the opposite directi
 In order to use the new variable for the prediction models it was easier for me to make it binary and produce probabilities for being in a high socioeconomic status. Calculated as a continuous value, and standardized: the mean value of the score will be zero, positive value means that the social economic status is above average.
 
 I divided the data to training (821 observations) and test set (277 observations) randomly.
-
-For more exploration I also used the `ShinuyRamatHaim` variable (Worse, Unchanged, Better or unknown) which stands for whether the participant's life got better in the last 10 years.
-
-
 
 
 ```{r include=FALSE}
@@ -411,28 +399,44 @@ glm_summary_tbl <- gtsummary::tbl_regression(glm_fit) %>%
 # Simple tree
 set.seed(305777468)
 tree <- rpart(ses_outcome ~ .,
-              data = train_dat,
+              data = train_dat %>% 
+                rename("Father Education" = TeudaGvohaAv_C,
+                       "Mother Education" = TeudaGvohaEm_C,
+                       "Father work at age 15" = father_work_at_age_15,
+                       "Age moving out to independent residence" = GilMegurimAtzmaim),
               method = "class")
 
 
-train_probs <- predict(tree, newdata = train_dat, type = "prob")[,2]
+
+
+
+train_probs <- predict(tree, newdata = train_dat%>% 
+                rename("Father Education" = TeudaGvohaAv_C,
+                       "Mother Education" = TeudaGvohaEm_C,
+                       "Father work at age 15" = father_work_at_age_15,
+                       "Age moving out to independent residence" = GilMegurimAtzmaim),
+                type = "prob")[,2]
 stree_accuracy_train <- mean((train_probs > 0.5) == train_dat$ses_outcome)
 stree_train_auc <- round(pROC::auc(train_dat$ses_outcome,
                                    train_probs), 3)
 
 
-test_probs <- predict(tree, newdata = test_dat, type = "prob")[,2]
+test_probs <- predict(tree, newdata = test_dat %>% 
+                rename("Father Education" = TeudaGvohaAv_C,
+                       "Mother Education" = TeudaGvohaEm_C,
+                       "Father work at age 15" = father_work_at_age_15,
+                       "Age moving out to independent residence" = GilMegurimAtzmaim), type = "prob")[,2]
 stree_accuracy_test <- mean((test_probs > 0.5) == test_dat$ses_outcome)
 stree_test_auc <- round(pROC::auc(test_dat$ses_outcome,
                                   test_probs), 3)
 
 
-# importance simple tree plot TODO: choose if to plot the tree of importace or the tree by free place
+# importance simple tree plot TODO: choose if to plot the tree of importance or the tree by free place
 # tree$variable.importance %>% 
 #   data.frame() %>%
-#   rownames_to_column(var = "Feature") %>%
+#   rownames_to_column(var = "variable") %>%
 #   rename(Overall = '.') %>%
-#   ggplot(aes(x = fct_reorder(Feature, Overall), y = Overall)) +
+#   ggplot(aes(x = fct_reorder(variable, Overall), y = Overall)) +
 #   geom_pointrange(aes(ymin = 0, ymax = Overall), color = "cadetblue", size = .3) +
 #   theme_minimal() +
 #   coord_flip() +
@@ -443,9 +447,9 @@ stree_test_auc <- round(pROC::auc(test_dat$ses_outcome,
 set.seed(305777468)
 # maximal tree
 max_tree <- rpart(ses_outcome ~ .,
-              data = train_dat,
-              control = rpart.control(minbucket=1, minsplit=2, cp=0),
-              method = "class")
+                  data = train_dat,
+                  control = rpart.control(minbucket=1, minsplit=2, cp=0),
+                  method = "class")
 
 # Pruning
 # calculate the CP and the 1-SE rule
@@ -540,8 +544,8 @@ RF_test_auc <- round(pROC::auc(test_dat$ses_outcome,
 # importance plot
 rf_ipmortance_plot <- rf_model$finalModel$importance %>% 
   data.frame() %>%
-  rownames_to_column(var = "Feature") %>%
-  ggplot(aes(x = fct_reorder(Feature, MeanDecreaseGini), y = MeanDecreaseGini)) +
+  rownames_to_column(var = "variable") %>%
+  ggplot(aes(x = fct_reorder(variable, MeanDecreaseGini), y = MeanDecreaseGini)) +
   geom_pointrange(aes(ymin = 0, ymax = MeanDecreaseGini), color = "cadetblue", size = .3) +
   theme_minimal() +
   coord_flip() +
@@ -689,14 +693,12 @@ final_performance_table <- tibble("Model" = c("Logistic Regression",
                                     glue("{round(svm_linear_test_pred*100, 3)}% ({svm_linear_test_auc})"),
                                     glue("{round(nn_test_pred*100, 3)}% ({auc_nn_test})")
                                   )
-) %>% 
-  flextable()
+) 
 
 
 
 
 # K-means on the outcome variable -----------------------------------------
-
 y_scaled <- y %>% 
   mutate_at(.vars = vars(-SerialNumber),
             ~scale(., center = TRUE, scale = TRUE))
@@ -710,6 +712,7 @@ fviz_nbclust(y_scaled %>% select(-SerialNumber),
 
 
 # K-means clustering
+set.seed(305777468)
 clust_kmeans <- kmeans(y_scaled %>% select(-SerialNumber), 3)$cluster %>%
   as.factor()
 
@@ -735,12 +738,36 @@ compare_kmeans_clusters_tbl <- gtsummary::tbl_summary(
 
 # PCA on the outcome variable ---------------------------------------------
 
-
-
 pr <- y_scaled %>% 
-  select(-SerialNumber) %>%   
+  select(-SerialNumber) %>%
+  rename("How crowded is the living place" = "TzfifutDiyurM_y",
+         "How many cars"  = "Mechonitbaalut_C_y",
+         "satis.living area"  = "MerutzeEzor_y",
+         "satis. health"  = "MatzavBriut_y", 
+         "Participant’s education"  = "TeudaGvoha_y",
+         "Frequency of internet use"  = "PehamimShimushInt_y",
+         "satisf. family relationship"  = "MerutzeKesherMishp_y", 
+         "Frequency of interacting with friends"  = "TadirutChaverim_y",
+         "satis. life"  = "MerutzeChaim_y", 
+         "satis. economic status"  = "MerutzeKalkali_y",
+         "income"  = "HachnasaAvodaNeto_y", 
+         "Number of apartments"  = "Mispar_dirot_y"
+  ) %>% 
   prcomp()
 
+
+pca_without_kmeans <- autoplot(pr,
+                               data = y  %>% 
+                                 left_join(x,
+                                           by = "SerialNumber") %>% 
+                                 select(-SerialNumber) %>% 
+                                 mutate(clust_kmeans = clust_kmeans),
+                               loadings.label = TRUE,
+                               loadings = TRUE,
+                               loadings.label.vjust = 1.5,
+                               loadings.label.hjust = 1
+) +
+  theme_classic()
 
 pca_kmeans <- autoplot(pr,
                        data = y  %>% 
@@ -752,7 +779,10 @@ pca_kmeans <- autoplot(pr,
                        frame = TRUE, 
                        frame.type = 'norm',
                        loadings.label = TRUE,
-                       loadings = TRUE
+                       loadings = TRUE,
+                       loadings.label.vjust = 1.5,
+                       loadings.label.hjust = 1
+                       
 ) +
   theme_classic()
 
@@ -796,11 +826,19 @@ service_by_ethnicity <- y %>%
   left_join(x,
             by = "SerialNumber") %>% 
   select(ses_outcome, service, Ethnicity) %>% 
+  mutate(Ethnicity = factor(Ethnicity, levels = c("Jew, Haredi",
+                                                  "Jew, Religious",
+                                                  "Jew, Masorti", 
+                                                  "Jew, Masorti not very Religious",
+                                                  "Jew, Secular",
+                                                  "Musilm",
+                                                  "Else"
+  ))) %>% 
   ggplot(
     aes(x = ses_outcome, fill = service)
   ) +
   geom_density(alpha = 0.5) +
-  facet_wrap(~Ethnicity) +
+  facet_wrap(~Ethnicity, nrow = 2) +
   xlab("Socioeconomic Score (centerd and scaled)") +
   scale_fill_manual(values = c("darkorange","cyan4")) +
   labs(caption = "Else:Christians, Druze, other religions, atheists") +
@@ -825,10 +863,19 @@ Father education, The age at which the participant moved to independent residenc
 
 From all of the significant variables the most significant one and the only one who had a p.value below 0.001 was weather the participant did a military / national service.
 
-```{r echo=FALSE, fig.width=9}
+```{r echo=FALSE, fig.height=3, fig.width=9}
 
 glm_fit %>% 
-  tidy()%>%
+  tidy() %>%
+  mutate(term = case_when(term == "serviceTRUE" ~ "service-TRUE",
+                          term == "TeudaGvohaAv_C" ~ "Father education",
+                          term == "EthnicityMusilm" ~ "Ethnicity-Musilm",
+                          term == "EthnicityJew, Haredi" ~ "Ethnicity-Jew, Haredi",
+                          term == "father_work_at_age_15Business owner" ~ "father work at age 15-Business owner",
+                          term == "GilMegurimAtzmaim" ~ "Age when participant moved to independent residence",
+                          term == "EthnicityJew, Masorti not very Religious" ~ "Ethnicity-Jew, Masorti not very Religious",
+                          term == "father_work_at_age_15Passed away" ~ "father work at age 15-Passed away",
+  )) %>% 
   mutate(signif = stars.pval(p.value)) %>% 
   arrange(p.value) %>% 
   select(term, estimate, p.value, signif) %>% 
@@ -844,7 +891,7 @@ glm_fit %>%
 
 #### Simple Decision Tree
 
-I tried to grow the deepest possible tree and prune it afterwards according to the 1-SE rule of thumb: According to that rule the recommended tree had no splits at all and the second best recommended tree was relatively complicated compared to the decision tree I received from the default parameters provided by the rpart.control function from the rpart package:
+I tried to grow the deepest possible tree and prune it afterwards according to the 1-SE rule of thumb: According to that rule the recommended tree had no splits at all and the second best recommended tree was relatively complicated compared to the decision tree I received from the default parameters provided by the `rpart.control` function from the `rpart` package:
 
 * `minbucket` setting to 7 which determines the minimum number of observations in any terminal node.
 
@@ -852,25 +899,25 @@ I tried to grow the deepest possible tree and prune it afterwards according to t
 
 * Complexity parameter `cp` setting to 0.01.
 
-```{r fig.height=6, fig.width=9}
-prp(tree, digits=2, varlen=-5, faclen=10, roundint=TRUE, cex = 0.8, fallen.leaves = TRUE)
+```{r fig.height=5, fig.width=9}
+prp(tree, digits=2, varlen=-100, faclen=30, roundint=TRUE, cex = 0.8, fallen.leaves = TRUE)
 ```
 
-As can be seen in the tree diagram the first split is wether the participant did a military / national service. Just like the logistic regression model it seems that this variable is a really good predictor.
+As can be seen in the tree diagram the first split is whether the participant did a military / national service. Just like the logistic regression model it seems that this variable is a really good predictor.
 
 #### Random Forest
 
 I ran Random Forest in a hope that it might perform better than the logistic regression model and the simple tree model. In order to choose the optimal tuning parameters I ran 10-fold cross validation over several combinations.
 
-Even though Random Forest is not as interpretable as the previous models I can still explore feature importance:
+Even though Random Forest is not as interpretable as the previous models I can still explore variable importance:
 
-```{r fig.height=4, fig.width=7}
+```{r fig.height=4, fig.width=8}
 
 rf_ipmortance_plot +
   labs(title = "Variable Importance - Random Forest") +
-  theme(title = element_text(size = 10),
+  theme(title = element_text(size = 11),
         axis.text.y =  element_text(size = 7)
-        ) 
+  ) 
 
 ```
 
@@ -883,14 +930,18 @@ I also ran other less interpretable models that might improve performance: SVM (
 ## Performance
 
 ```{r}
-final_performance_table
+final_performance_table %>% 
+  pivot_longer(-Model) %>% 
+  pivot_wider(names_from = Model, values_from = value, id_cols = name) %>% 
+  rename(" " = name) %>% 
+  flextable()
 ```
 
 In terms of performance it seems that the logistic regression and the Linear SVM models did the best job in terms of AUC and accuracy (probability threshold set to 0.5).
 
 The simple decision tree wasn't as good as the other models but it is much more interpretable. 
 
-Neural Network overfits the data and is not a good choice for a relatively small data set (both in terms of observations and features).
+Neural Network overfits the data and is not a good choice for a relatively small data set (both in terms of observations and variabls).
 
 If I had to choose one model I would choose Logistic Regression, it is almost the most interpretable model and it provides the best performance on the test set.
 
@@ -901,30 +952,37 @@ If I had to choose one model I would choose Logistic Regression, it is almost th
 I wanted to explore interesting groups by unsupervised learning methods. I ran PCA over the original socioeconomic variables (before creating the socioeconomic score) in order to find some interesting insights. These are the Loadings for the First 2 Principal Components:
 
 ```{r}
-# pr$rotation %>% 
-#   as.data.frame() %>% 
-#   tibble::rownames_to_column("Variable") %>% 
-#   select(Variable, PC1, PC2) %>% 
-#   mutate_at(vars(PC1, PC2), ~round(., 3)) %>% 
-#   pivot_longer(-Variable) %>% 
+# pr$rotation %>%
+#   as.data.frame() %>%
+#   tibble::rownames_to_column("Variable") %>%
+#   select(Variable, PC1, PC2) %>%
+#   mutate_at(vars(PC1, PC2), ~round(., 3)) %>%
+#   pivot_longer(-Variable) %>%
 #   pivot_wider(names_from = Variable, values_from = value) %>%
-#   rename(" " = name) %>% 
+#   rename(" " = name) %>%
 #   flextable()
 ```
 
-As we can see the first Principal Component directions are all positives, which means that it is a combination of the original variables (similar to my socioeconomic score). In general the highest the First Principal Component value is the highest the socioeconomic status. The second Principal Component includes different directions, which might imply that the variables have different common characters: The most influential variables towards the positive direction are the frequency of internet use and how crowded the living place is, towards the negative direction how much the participant is satisfied with his life in general and with his economic status. 
+As we can see the first principal component directions are all positives, which means that it is a combination of the original variables (similar to my socioeconomic score). In general the highest the First Principal Component value is the highest the socioeconomic status. The second Principal Component includes different directions, which might imply that the variables have different common characters: The most influential variables towards the positive direction are the frequency of internet use and how crowded the living place is, towards the negative direction how much the participant is satisfied with his life in general and with his family relationships. 
 
 ### K-means
 
-```{r fig.height=5, fig.width=10}
+```{r fig.height=6, fig.width=9}
 pca_kmeans + theme(legend.position = "top")
 ```
 
-I wanted to find different clusters among the observations. In order to choose the optimal number of clusters I visualized the within cluster sums of squares and by following the "Elbow Method" I chose the number 3. In the following plot we can see the Principal Components for every observation and the different clusters.
+I wanted to find different clusters among the observations. In order to choose the optimal number of clusters I visualized the within cluster sums of squares and by following the "Elbow Method" I chose the number 3.
+
+We use the Elbow method by calculating for each cluster the total within sum of square:
+
+$$\sum^k_{k=1}W(C_k) = \sum^k_{k=1}\sum_{x_i \in C_k}(x_i - \mu_k)^2 \tag{7}$$
+When $x_i$ is a data point belonging to the cluster $C_k$ and $\mu_k$ is the mean value of the points assigned to the cluster $C_k$. After we plot the within sum of square for each number of clusters and pick the number by "the elbow of the curve".
+
+In the following plot we can see the Principal Components for every observation and the different clusters.
 
 By simple exploration it seems that the different subgroups can be characterized as:
 
-*Cluster 1 (red)* - High technological orientation (96% use the internet on daily basis), low satisfaction from their lives and from their economic status, tend to have values somewhere between the other two clusters.
+*Cluster 1 (red)* - High technological orientation (96% use the internet on daily basis), low satisfaction from their lives, tend to have values somewhere between the other two clusters.
 
 *Cluster 2 (green)* - Mostly conservative population (65% Jew Haredi or Muslims), low technological orientation (90% don't use the internet), more satisfied with their lives compared to Cluster 1.
 
@@ -935,10 +993,10 @@ By simple exploration it seems that the different subgroups can be characterized
 compare_kmeans_clusters_tbl <- gtsummary::tbl_summary(
   data = y %>% 
     left_join(
-      x #%>% select(SerialNumber, Ethnicity, Minn, service)
+      x 
     ) %>% 
     select(-SerialNumber) %>% 
-    select(Ethnicity, TeudaGvoha_y, PehamimShimushInt_y, service, MerutzeChaim_y, MerutzeKalkali_y) %>% 
+    select(Ethnicity, TeudaGvoha_y, PehamimShimushInt_y, service, MerutzeChaim_y, MerutzeKesherMishp_y) %>% 
     mutate(clust_kmeans),
   by = clust_kmeans
 ) 
@@ -951,7 +1009,7 @@ In order to provide a possible inference I wanted to make sure that the military
 
 In order to asses the effect I visualized the histogram of the socioeconomic outcome (before turning it to binary) for different ethnic groups and for those who did and didn't do a national / military service.
 
-```{r fig.height=4, fig.width=8}
+```{r fig.height=3, fig.width=10}
 service_by_ethnicity
 ```
 
@@ -959,12 +1017,13 @@ It looks like that the effect of the service is consistent in all ethnic groups 
 
 # Discussion and Conclusion
 
-I found that completing a military or national service is a great predictor for being in a high socioeconomic status in the future.
+I found that completing a military or national service is a great predictor for being in a high socioeconomic status in the future. I assume that a possible reason is that taking a part in a military or a national service might make individuals feel as an integral part of the society. Military or national service might make people having relationships more easily because of common experience or more satisfied by feeling like "giving their part" to society. I think that the best way to deal with social mobility is to help all populations feel as part of the society by finding the right platforms. Yet, it is important to notice that there are very different subpopulations as I found in the cluster analysis  and perhaps different subgroups should be treated in different ways.
 
-I assume that a possible reason is that taking a part in a military or a national service might make individuals feel as being an integral part of the society. Military or national service might make people having relationships more easily because of common experience or more satisfied by feeling like "giving their part" to society.
-
-If my assumptions are correct, I think that the best way to deal with social mobility is to help all populations feel as part of the society by finding the right platforms. Yet, it is important that there are very different sub populations as I found in the cluster analysis - and perhaps different subgroups should be treated in different ways.
+These conclusions seem to be consistent with Raj Chetty work on social mobility in the United States: Two of the five main predictors were segregation and strength of social networks. In the Israeli military service different people from different backgrounds get to know one another and one can see the Israeli army as one big social network.
 
 # References
 
 [Questionnaire and more details about the survey in The Central Bureau of Statistics website](https://www.cbs.gov.il/he/publications/Pages/2020/%D7%94%D7%A1%D7%A7%D7%A8-%D7%94%D7%97%D7%91%D7%A8%D7%AA%D7%99-2018.aspx)
+
+
+[Raj Chetty work on social mobility in the United States](https://academic.oup.com/qje/article/129/4/1553/1853754?login=true)
